# diffusion

./: .gitignore  README.md  pyproject.toml  report.md  train.sh
outputs/: config.json  evaluation_results.json  training_history.json
outputs/hidden_128/: config.json  evaluation_results.json
outputs/hidden_256/: config.json  evaluation_results.json  training_history.json
outputs/hidden_32/: config.json  evaluation_results.json  training_history.json
outputs/hidden_512/: config.json  evaluation_results.json  training_history.json
outputs/hidden_64/: config.json  evaluation_results.json  training_history.json
outputs/layer_1/: config.json  evaluation_results.json  training_history.json
outputs/layer_2/: config.json  evaluation_results.json  training_history.json
outputs/layer_3/: config.json  evaluation_results.json  training_history.json
outputs/layer_4/: config.json  evaluation_results.json  training_history.json
outputs/layer_5/: config.json  evaluation_results.json  training_history.json
src/: __init__.py  data.py  eval.py  extract_results.py  model.py  run.py  sampling.py  train.py  util.py
